# Domain-Driver-Design-Python

./: .gitignore  Makefile  README.md  docker-compose.yaml  go.mod  main.py  pyproject.toml
src/application/commands/: create_order_command.py
src/application/handlers/: create_order_handler.py
src/domain/events/: order_created.py
src/domain/florist/: entities.py  value_objects.py
src/domain/models/: order.py
src/domain/repositories/: order_repository.py
src/domain/services/: order_service.py
src/infrastructure/: event_bus.py  in_memory_order_repository.py
src/infrastructure/event_handlers/: send_email_on_order_created.py
src/infrastructure/grpc/protogen_go/: greeter.pb.go  greeter.pb.gw.go  greeter_grpc.pb.go
src/infrastructure/grpc/protogen_py/: greeter_pb2.py  greeter_pb2_grpc.py
src/presentation/: app.py
src/presentation/grpc/: app.py  gateway.go
src/proto/: greeter.proto
src/shared/: events.py
